# disasterlens-agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.verifier_ui  Dockerfile.voice_gateway  LICENSE  README.md  SUBMISSION.md  pyproject.toml
agent/: agent.py  config.py  coordinator.py  intake.py  main.py  notifier.py  prompts.py  telemetry.py  verifier_cli.py
agent/tools/: dedup.py  elastic.py  geocode.py  name_variants.py  notify.py  pfif_export.py  photo_match.py  skills.py  verifier.py
data/: embed.py  generate_synthetic.py  ingest_to_elastic.py  personas.py  variants.py
data/analysis/: nicknames.txt
data/mappings/: missing_person_reports.json  reunification_cases.json  shelter_rosters.json  social_reports.json
docs/: PRD.md  design.md  devpost_description.md  outreach_kit.md  sprint1_day1.md
evals/: explain_match.py  family_pairs.jsonl  score.py  score_results.csv
scripts/: create_indices.py  deploy.sh  incident_stream.py  reset_demo_state.py  setup_inference.py  sprint1_day1.sh  standing_query_watcher.py
seeker_ui/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
seeker_ui/src/: App.tsx  i18n.ts  styles.css
seeker_ui/src/lib/: api.ts
verifier_ui/: .env.example  index.html  package-lock.json  package.json  server.py
verifier_ui/src/: App.tsx  styles.css
verifier_ui/src/components/: CandidateCard.tsx  Queue.tsx  ReunificationMap.tsx  TriageList.tsx
verifier_ui/src/lib/: api.ts
voice_gateway/: server.py
