[project]
name = "google-hackathon"
version = "0.1.0"
description = "DisasterLens — language-aware family reunification agent (Google Cloud Rapid Agent Hackathon, Elastic track)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Agent framework
    "google-adk>=0.2.0",
    # LLM (Vertex AI / Gemini)
    "google-genai>=0.3.0",
    # Elastic
    "elasticsearch>=8.15.0",
    # Google Cloud
    "google-cloud-firestore>=2.18.0",
    "google-cloud-secret-manager>=2.20.0",
    # Config / runtime
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "mcp>=1.27.1",
    "fastapi>=0.136.3",
    "uvicorn>=0.48.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]
